...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCurrentSprintTotalPointsTextView" />


    <Button
        android:id="@+id/viewCurrentSprintSeeStoriesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="goToCurrentStoryListMenu"
        android:text="See Current Stories"
        app:layout_constraintEnd_toEndOf="parent"
...
