package com.example.myapplication;

import android.content.Context;

import androidx.test.espresso.action.ViewActions;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.platform.app.InstrumentationRegistry;

import com.actual.myapplication.StoryBuilder;
import com.actual.myapplication.StoryManager;

import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withChild;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.core.AllOf.allOf;
import static org.hamcrest.core.Is.is;
import static org.hamcrest.core.IsInstanceOf.instanceOf;
import static org.hamcrest.core.StringContains.containsString;
import static org.junit.Assert.assertEquals;

/**
 * Instrumented test, which will execute on an Android device.
 *
 * @see <a href="http://d.android.com/tools/testing">Testing documentation</a>
 */
@RunWith(AndroidJUnit4.class)
public class StoryListMenuTest {

    StoryManager storyManager;
    @Before
    public void setUp() {
        storyManager = StoryManager.initiateStoryManager();
        StoryBuilder storyBuilder = StoryBuilder.initiateBuilder();
        storyBuilder.setPoints(9);
        storyBuilder.setDescription("Test Description");
        storyBuilder.setTitle("Test Title");
        storyManager.addStory(storyBuilder);
        storyBuilder.setPoints(10);
        storyBuilder.setTitle("Second Title");
        storyBuilder.setDescription("Second Description");
        storyManager.addStory(storyBuilder);
    }

    @Rule
    public ActivityScenarioRule<MainMenu> activityScenarioRule
            = new ActivityScenarioRule<>(MainMenu.class);

    @Test
    public void StoryListMenuShowsStoryFromList() {
        onView(withId(R.id.editStoryBtn)).perform(click());
        onView(withText("Test Title")).check(matches(isDisplayed()));
    }

    @Test
    public void StoryListMenuShowsSecondTitleThatWasAdded() {
        onView(withId(R.id.editStoryBtn)).perform(click());
        onView(withText("Second Title")).check(matches(isDisplayed()));
    }

    @Test
    public void StoryListMenuTakesUserToEditStoryMenuWhenItemIsClickedOn() {
        onView(withId(R.id.editStoryBtn)).perform(click());
        onView(allOf(withText("Test Title"))).perform(click());
        onView(withId(R.id.editTitleAgain)).check(matches(isDisplayed()));
    }

    @Test
    public void StoryListMenuTakesUserToEditStoryMenuWithSameStoryTitleWhenItemIsClickedOn() {
        onView(withId(R.id.editStoryBtn)).perform(click());
        onView(allOf(withText("Second Title"))).perform(click());
        onView(withId(R.id.editTitleAgain)).check(matches(withText("Second Title")));
    }

}
